translation-tool/inputs/source_meta/objects/HNS_SFDC_ORD_SEARCH_VW__x.object
<CustomObject>
    <description>HNS_SFDC_ORD_SEARCH_VW</description>
    <externalDataSource>PSView</externalDataSource>
    <externalName>HNS_SFDC_ORD_SEARCH_VW</externalName>
    <fields>
        <fullName>CLASS_A_ID__c</fullName>
        <description>CLASS_A_ID</description>
        <externalDeveloperName>CLASS_A_ID</externalDeveloperName>
        <label>CLASS_A_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISTRIBUTOR_ID__c</fullName>
        <description>DISTRIBUTOR_ID</description>
        <externalDeveloperName>DISTRIBUTOR_ID</externalDeveloperName>
        <label>DISTRIBUTOR_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSO_ID__c</fullName>
        <description>FSO_ID</description>
        <externalDeveloperName>FSO_ID</externalDeveloperName>
        <label>FSO_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_ERROR__c</fullName>
        <description>IS_ERROR</description>
        <externalDeveloperName>IS_ERROR</externalDeveloperName>
        <label>IS_ERROR</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_ID__c</fullName>
        <description>ORDER_ID</description>
        <externalDeveloperName>ORDER_ID</externalDeveloperName>
        <label>ORDER_ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORDER_STATUS__c</fullName>
        <description>ORDER_STATUS</description>
        <externalDeveloperName>ORDER_STATUS</externalDeveloperName>
        <label>ORDER_STATUS</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ORDER_TRACE__c</fullName>
        <description>ORDER_TRACE</description>
        <externalDeveloperName>ORDER_TRACE</externalDeveloperName>
        <label>ORDER_TRACE</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_ORDER_ID__c</fullName>
        <description>SFDC_ORDER_ID</description>
        <externalDeveloperName>SFDC_ORDER_ID</externalDeveloperName>
        <label>SFDC_ORDER_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>HNS_SFDC_ORD_SEARCH_VW</label>
    <pluralLabel>HNS_SFDC_ORD_SEARCH_VW</pluralLabel>
</CustomObject>